# SuperAgent

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_GUIDE.md  CLI_USAGE.md  DEPLOYMENT.md  INSTALLATION.md  MONITORING.md  SYSTEM_INTEGRATION.md  UX_SPEC.md  V2_UPGRADE_GUIDE.md
kubernetes/: deployment.yaml
plugins/example-plugin/: main.py  plugin.json
superagent/: __init__.py  __main__.py  compat.py
superagent/agents/: __init__.py  advanced_planner.py  base.py  executor.py  htn_planner.py  models.py  planner.py  react_agent.py  reflection.py
superagent/automation/: __init__.py  scheduler.py
superagent/cli/: __init__.py  app.py  chat.py  clipboard.py  config.py  conversation_manager.py  cost_tracker.py  export_engine.py  file_handler.py  models.py  providers.py  run.py  ui.py  ui_components.py  wizard.py
superagent/cli/interactive/: __init__.py  autocomplete.py  commands.py  enhanced_shell.py  session.py  shell.py  wizard.py
superagent/core/: __init__.py  config.py  logger.py  runtime.py  security.py  utils.py
superagent/llm/: __init__.py  base.py  factory.py  litellm_provider.py  models.py  provider.py  streaming.py
superagent/mcp/: __init__.py  client.py  host.py
superagent/memory/: __init__.py  adaptive_memory.py  base.py  context.py  embeddings.py  manager.py  models.py  vector_store.py
superagent/monitoring/: __init__.py  analytics.py  health.py  metrics.py  profiler.py  telemetry.py
superagent/observability/: __init__.py  otel.py  redaction.py
superagent/orchestration/: __init__.py  agents.py  context_fusion.py  context_health.py  event_bus.py  orchestrator.py
superagent/plugins/: __init__.py  base.py  loader.py  registry.py
superagent/protocol/: __init__.py  events.py
superagent/protocol/schemas/: event.diff.json  event.error.json  event.plan.json  event.session.json  event.tool.json
superagent/security/: __init__.py  audit.py  consent.py  path_trust.py  policy_loader.py  rbac.py  secrets.py
superagent/tools/: __init__.py  base.py  executor.py  models.py  plugin_system.py  registry.py  transactional_executor.py
superagent/tools/builtin/: __init__.py  code_tools.py  file_tools.py  system_tools.py  web_tools.py
superagent/ux/: __init__.py  checkpoint.py  diff_engine.py  intent_router.py  orchestrator.py
tests/: test_agents.py  test_cli.py  test_cli_v2.py  test_core.py  test_enhanced_cli.py  test_integration.py  test_llm_provider.py  test_memory.py  test_monitoring.py  test_performance.py  test_plugin_system.py  test_security.py  test_system_validation.py  test_tools.py
